# zstd-bench

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: Q-sweep-config.toml  compress_config.toml  config.toml
src/: benchmark.rs  config.rs  lib.rs  print.rs  zstd.c  zstd.rs
src/benchmarks/: compress.rs  literals.rs  mod.rs
