[package]
name = "zstd-bench"
version = "0.1.0"
authors = ["Nick Terrell <terrelln@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.98"
toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.59"
glob = "0.3.0"
fasthash = "0.4.0"
clap = "2.33.3"
itertools = "0.10.1"
num-traits = "0.2"
num-derive = "0.3"

[build-dependencies]
cc = { version = "1.0.69", features = ["parallel"]}
git2 = "0.13"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.59"
fasthash = "0.4.0"
regex = "1.5.4"
